<resources>
    <string name="app_name">CoviTrack</string>
    <string name="open">open_drawer</string>
    <string name="close">close_drawer</string>
    <string name="are_you_feeling_sick">Are you feeling sick?</string>
    <string name="if_you_are_feeling_sick_with_any_of_covid_19_symptoms_please_call_or_email_on_following_helpline_immediately_for_help">If you are feeling sick with any of covid-19 symptoms please Call or Email on following helpline immediately for help.</string>
    <string name="call_now">Call Now</string>
    <string name="send_email">Send Email</string>
    <string name="prevention">Prevention</string>
    <string name="avoid_close_contact">Avoid Close Contact</string>
    <string name="clean_your_hands_often">Clean your hands often</string>
    <string name="wear_a_face_mask">Wear a face mask</string>
    <string name="do_your_own_medical_test">🏥 Do your own medical test</string>
    <string name="global_statistics">🌎 Global Statistics</string>
    <string name="country_wise_statistics">🏡 Country Wise Statistics</string>
    <string name="state_wise_statistics_for_india">🇮🇳 State Wise Statistics For India</string>
    <string name="book_your_slot_for_vaccination">💉 Book your slot for vaccination</string>
    <string name="country_name">Country Name</string>
    <string name="register_yourself_for_vaccination_on_cowin_portal">Register yourself for vaccination on Cowin portal.</string>
    <string name="diagnose_yourself_for_covid_19_or_any_other_disease">Diagnose yourself for Covid-19 or any other disease.</string>
    <string name="check_live_global_covid_19_statistics_and_live_covid_19_statistics_for_every_state_in_india">Check live Global Covid-19 statistics and live Covid-19 statistics for every state in India.</string>
    <string name="global_statistics1">Global Statistics</string>
    <string name="back_btn">back_btn</string>
    <string name="affected">Affected</string>
    <string name="death">Death</string>
    <string name="recovered">Recovered</string>
    <string name="active">Active</string>
    <string name="statistics">Statistics</string>
    <string name="_0">0</string>
    <string name="zero">Zero</string>
    <string name="critical">Critical</string>
    <string name="tests">Tests</string>
    <string name="affected_countries">Affected countries</string>
    <string name="today_s_statistics">Today\'s Statistics</string>
    <string name="today_cases">Today Cases</string>
    <string name="today_recovered">Today Recovered</string>
    <string name="search">Search</string>
    <string name="total_affected_foreigners">Total Affected Foreigners</string>
    <string name="state_name">State Name</string>
    <string name="next">Next</string>
    <string name="today_deaths">Today Deaths</string>
    <string name="today_s_statistics1">Today\'s Statistics</string>
    <string name="flag_image">Flag image</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="_40_of_total_affected">40% of total Affected</string>
    <string name="home">Home</string>
    <string name="additional_features">Additional features</string>
    <string name="symptoms_check">Symptoms check</string>
    <string name="about_us">About Us</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="share_app">Share App</string>
    <string name="rate_the_app">Rate the App</string>
</resources>